--- a/fastapi/.env.example
+++ b/fastapi/.env.example
@@ -1,4 +1,4 @@
 ADMIN_API_KEY=
-DATABASE_URL=
+DATABASE_URL=postgresql://postgres@localhost:5432/duck_hunt
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
