--- a/fastapi/.env.example
+++ b/fastapi/.env.example
@@ -1,4 +1,5 @@
 ADMIN_API_KEY=
 DATABASE_URL=postgresql://postgres@localhost:5432/duck_hunt
+FRONTEND_URL=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
