--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.js
+!frontend-rewrite.js
 !jest.config.js
 *.d.ts
 node_modules
@@ -8,3 +9,8 @@ node_modules
 cdk.out
 
 cdk.context.json
+
+deploy.sh
+dist
+*.zip
+.yarn
