--- a/lambda/package.json
+++ b/lambda/package.json
@@ -3,17 +3,20 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "build": "tsc && cp src/frontend-rewrite.js dist/frontend-rewrite.js"
+    "build": "esbuild src/api/public/message.ts --bundle --platform=node --target=node22 --outdir=dist --outbase=src && cp src/frontend-rewrite.js dist/frontend-rewrite.js"
   },
   "dependencies": {
+    "@aws-sdk/client-textract": "^3.840.0",
     "aws-sdk": "^2.1692.0"
   },
   "devDependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.840.0",
-    "@aws-sdk/client-dynamodb": "^3.840.0",
-    "@aws-sdk/client-s3": "^3.839.0",
-    "@types/aws-lambda": "^8.10.109",
+    "@aws-sdk/client-bedrock-runtime": "^3.848.0",
+    "@aws-sdk/client-dynamodb": "^3.848.0",
+    "@aws-sdk/client-s3": "^3.850.0",
+    "@types/aws-lambda": "^8.10.152",
     "@types/node": "^18.0.0",
+    "aws-lambda": "^1.0.7",
+    "esbuild": "^0.25.8",
     "typescript": "^4.9.0"
   }
 }
