--- a/shared/package.json
+++ b/shared/package.json
@@ -4,5 +4,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc && cp src/frontend-rewrite.js dist/frontend-rewrite.js"
+  },
+  "devDependencies": {
+    "@aws-sdk/lib-dynamodb": "^3.850.0"
   }
 }
