refactor: move DynamoDB utilities from shared to lambda
- Move all DynamoDB-related files from shared/src/dynamo/ to lambda/src/dynamo/
- Remove shared/src/invokeBedrock.ts (moved to lambda)
- Add new S3 utility in lambda/src/s3.ts
- Update package.json dependencies in lambda and shared
- Update imports and references across affected files
- Update CDK stack configurations in lib/ files

--- a/lambda/tsconfig.json
+++ b/lambda/tsconfig.json
@@ -9,6 +9,7 @@
     "declaration": false,
     "sourceMap": false,
     "outDir": "./dist",
+    "baseUrl": ".",
     "paths": {
       "@shared/*": ["../shared/src/*"]
     }
