--- a/lambda/package.json
+++ b/lambda/package.json
@@ -7,14 +7,17 @@
   },
   "dependencies": {
     "@aws-sdk/client-textract": "^3.840.0",
-    "aws-sdk": "^2.1692.0"
-  },
-  "devDependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.848.0",
     "@aws-sdk/client-dynamodb": "^3.848.0",
     "@aws-sdk/client-s3": "^3.850.0",
+    "@aws-sdk/lib-dynamodb": "^3.850.0",
+    "aws-sdk": "^2.1692.0",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
     "@types/aws-lambda": "^8.10.152",
     "@types/node": "^18.0.0",
+    "@types/uuid": "^9.0.0",
     "aws-lambda": "^1.0.7",
     "esbuild": "^0.25.8",
     "typescript": "^4.9.0"
