--- a/lambda/package.json
+++ b/lambda/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^18.0.0",
     "@types/uuid": "^9.0.0",
     "aws-lambda": "^1.0.7",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.0"
   }
 }
