--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   ],
   "bin": "bin/duck-hunt.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --noEmit",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk"
@@ -17,6 +17,8 @@
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
     "aws-cdk": "2.1021.0",
+    "dotenv": "^17.2.3",
+    "esbuild": "^0.27.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
